--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <a href="https://www.tiktok.com/@eka_rusli01?is_from_webapp=1&sender_device=pc">
                         <i class='bx bxl-tiktok' ></i></a>
                 </div>
-                <a href="assets/download-cv.pdf" download="" class="btn"
+                <a href="ANDIKA RUSLI.pdf" download="" class="btn"
                     >Download CV</a
                 >
             </div>
