--- a/index.html
+++ b/index.html
@@ -101,15 +101,6 @@
                     </p>
                     <a href="#experience1" class="btn">Read More</a>
                 </div>
-
-                <div class="skills-box">
-                    <i class='bx bx-car' ></i>
-                    <h3>Driver Mobil</h3>
-                    <p>
-                        Selain mengemudikan alat berat saya juga dapat mengemudikan kendaraan mobil dengan baik.
-                    </p>
-                    <a href="#experience2" class="btn">Read More</a>
-                </div>
             </div>
         </section>
 
@@ -141,9 +132,9 @@
                 <div class="experiences-box">
                     <img src="assets/experience3.jpg" alt="" id="experience3" />
                     <div class="experiences-layer">
-                        <h4>Driver Mobil</h4>
+                        <h4>Car Driver</h4>
                         <p>
-                           Ini adalah potret saya bersama rombongan pengemudi mobil.
+                           Ini adalah potret kegiatan saya bersama rombongan pengemudi mobil.
                         </p>    
                     </div>
                 </div>
